# mlOps_bikesharing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.dockerfile  docker-compose.yaml  init-s3.py  mlflow.dockerfile  pyproject.toml  script.py
.github/workflows/: CI.yml
api/: Dockerfile
api/app/: main.py
dags/: bike_sharing_dag.py
dags/source/: bike_sharing.py
dags/tests/: test_prepare_data.py
scripts/: setup-precommit.sh
