[project]
name = "bikesharing"
version = "0.0.1"
dependencies = [
    "pandas",
    "scikit-learn",
    "mlflow",
    "numpy==1.26.4",
    "s3fs==2024.6.1",
    "boto3",
]

[project.optional-dependencies]
dev = ["pytest"]
train = ["ucimlrepo"]
api = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "pydantic",
]

[tool.uv]
package = false


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools.packages.find]
where = ["."]
include = ["dags*"]
exclude = ["logs*"]
