[project]
name = "bikesharing"
version = "0.0.1"
dependencies = [
    "pandas",
    "scikit-learn",
    "mlflow",
    "numpy==1.26.4",
    "s3fs==2024.6.1",
    "boto3",
    "flask==2.2.5",
    "connexion==2.14.2",
]

[project.optional-dependencies]
dev = ["pytest"]
train = ["apache-airflow", "ucimlrepo"]
api = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "pydantic",
]

[tool.uv]
package = false


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools.packages.find-namespace]
where = ["."]
include = ["dags*"]
exclude = ["logs*"]

[tool.setuptools.packages.find]
where = ["dags"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["dags/tests", "tests"]
pythonpath = ["dags", ".", "/opt/airflow/dags"]
addopts = "-v"
